--- a/games.html
+++ b/games.html
@@ -22,9 +22,9 @@
 
 <div class="grid">
 
-<div class="card" onclick="launchGame('game1.html')">
+<div class="card" onclick="launchGame('fnaf6.html')">
   <img src="images/game1.png">
-  <div class="game-title">Game 1</div>
+  <div class="game-title">FNAF 6</div>
 </div>
 
 <div class="card" onclick="launchGame('game2.html')">
