--- a/games.html
+++ b/games.html
@@ -23,7 +23,7 @@
 <div class="grid">
 
 <div class="card" onclick="launchGame('fnaf6.html')">
-  <img src="images/game1.png">
+  <img src="images/fnaf6.png">
   <div class="game-title">FNAF 6</div>
 </div>
 
