--- a/credits.html
+++ b/credits.html
@@ -19,7 +19,7 @@
 
 <div class="main">
 <h1 class="page-title">🧾 Credits</h1>
-<p style="font-size:22px">Credits for the Website<br>Built by RVEPRTY- Developer, Owner, and Marketer😎<br>Powered by Vercel</p>
+<p style="font-size:22px"><strong>Credits for the Website</strong><br>RVEPRTY- Developer, Owner, and Marketer😎<br>Powered by Vercel</p>
 </div>
 
 <script src="js/main.js"></script>
