Added Game 3 (Pizza Tower)

--- a/games.html
+++ b/games.html
@@ -30,9 +30,9 @@
       <img src="images/minecraft.png" alt="Game 2">
       <div class="game-title">Minecraft 1.12.2</div>
     </div>
-    <div class="card" onclick="launchGame('games/game3.html')">
-      <img src="images/game3.png" alt="Game 3">
-      <div class="game-title">Game 3</div>
+    <div class="card" onclick="launchGame('games/pizzatower.html')">
+      <img src="images/pizzatower.png" alt="Game 3">
+      <div class="game-title">Pizza Tower</div>
     </div>
     <div class="card" onclick="launchGame('games/game4.html')">
       <img src="images/game4.png" alt="Game 4">
