--- a/games.html
+++ b/games.html
@@ -20,88 +20,115 @@
 <div class="main">
   <h1 class="page-title">🎮 Games</h1>
 
+  <!-- 🔍 Search + Type Filters -->
+  <div class="filter-bar">
+    <input id="searchBar" onkeyup="searchItems()" placeholder="Search games...">
+    <button onclick="filterItems('all')">All</button>
+    <button onclick="filterItems('game')">Games</button>
+    <button onclick="filterItems('app')">Apps</button>
+  </div>
+
+  <!-- 🧩 Category Filters -->
+  <div class="filter-bar">
+    <button onclick="filterCategory('all')">All</button>
+    <button onclick="filterCategory('story')">Story</button>
+    <button onclick="filterCategory('action')">Action</button>
+    <button onclick="filterCategory('puzzle')">Puzzle</button>
+  </div>
+
   <div class="grid">
-    <!-- 20 placeholder game cards -->
-    <div class="card" onclick="launchGame('games/fnaf6.html')">
-      <img src="images/fnaf6.png" alt="Game 1">
+
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/fnaf6.html')">
+      <img src="images/fnaf6.png">
       <div class="game-title">FNAF 6</div>
     </div>
-    <div class="card" onclick="launchGame('games/minecraft.html')">
-      <img src="images/minecraft.png" alt="Game 2">
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/minecraft.html')">
+      <img src="images/minecraft.png">
       <div class="game-title">Minecraft 1.12.2</div>
     </div>
-    <div class="card" onclick="launchGame('games/pizzatower.html')">
-      <img src="images/pizzatower.png" alt="Game 3">
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/pizzatower.html')">
+      <img src="images/pizzatower.png">
       <div class="game-title">Pizza Tower</div>
     </div>
-    <div class="card" onclick="launchGame('games/cuphead.html')">
-      <img src="images/Cuphead.png" alt="Game 4">
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/cuphead.html')">
+      <img src="images/Cuphead.png">
       <div class="game-title">Cuphead</div>
     </div>
-    <div class="card" onclick="launchGame('games/amaze.html')">
-      <img src="images/Amaze.png" alt="Game 5">
+
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/amaze.html')">
+      <img src="images/Amaze.png">
       <div class="game-title">Amaze</div>
     </div>
-    <div class="card" onclick="launchGame('games/fnaf1.html')">
-      <img src="images/fnaf1.png" alt="Game 6">
+
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/fnaf1.html')">
+      <img src="images/fnaf1.png">
       <div class="game-title">FNAF 1</div>
     </div>
-    <div class="card" onclick="launchGame('games/buckshotroulette.html')">
-      <img src="images/buckshotroulette.png" alt="Game 7">
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/buckshotroulette.html')">
+      <img src="images/buckshotroulette.png">
       <div class="game-title">Buckshot Roulette</div>
     </div>
-    <div class="card" onclick="launchGame('games/omori.html')">
-      <img src="images/omori.png" alt="Game 8">
+
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/omori.html')">
+      <img src="images/omori.png">
       <div class="game-title">OMORI</div>
     </div>
-    <div class="card" onclick="launchGame('games/basketrandom.html')">
-      <img src="images/basketrandom.png" alt="Game 9">
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/basketrandom.html')">
+      <img src="images/basketrandom.png">
       <div class="game-title">Basket Random</div>
     </div>
-    <div class="card" onclick="launchGame('games/bankrobbery2.html')">
-      <img src="images/bankrobbery2.png" alt="Game 10">
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/bankrobbery2.html')">
+      <img src="images/bankrobbery2.png">
       <div class="game-title">Bank Robbery 2</div>
     </div>
-    <div class="card" onclick="launchGame('games/game11.html')">
-      <img src="images/game11.png" alt="Game 11">
-      <div class="game-title">Game 11</div>
+
+    <!-- Remaining placeholders -->
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game11.html')">
+      <img src="images/game11.png"><div class="game-title">Game 11</div>
     </div>
-    <div class="card" onclick="launchGame('games/game12.html')">
-      <img src="images/game12.png" alt="Game 12">
-      <div class="game-title">Game 12</div>
+
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game12.html')">
+      <img src="images/game12.png"><div class="game-title">Game 12</div>
     </div>
-    <div class="card" onclick="launchGame('games/game13.html')">
-      <img src="images/game13.png" alt="Game 13">
-      <div class="game-title">Game 13</div>
+
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/game13.html')">
+      <img src="images/game13.png"><div class="game-title">Game 13</div>
     </div>
-    <div class="card" onclick="launchGame('games/game14.html')">
-      <img src="images/game14.png" alt="Game 14">
-      <div class="game-title">Game 14</div>
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game14.html')">
+      <img src="images/game14.png"><div class="game-title">Game 14</div>
     </div>
-    <div class="card" onclick="launchGame('games/game15.html')">
-      <img src="images/game15.png" alt="Game 15">
-      <div class="game-title">Game 15</div>
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game15.html')">
+      <img src="images/game15.png"><div class="game-title">Game 15</div>
     </div>
-    <div class="card" onclick="launchGame('games/game16.html')">
-      <img src="images/game16.png" alt="Game 16">
-      <div class="game-title">Game 16</div>
+
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game16.html')">
+      <img src="images/game16.png"><div class="game-title">Game 16</div>
     </div>
-    <div class="card" onclick="launchGame('games/game17.html')">
-      <img src="images/game17.png" alt="Game 17">
-      <div class="game-title">Game 17</div>
+
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/game17.html')">
+      <img src="images/game17.png"><div class="game-title">Game 17</div>
     </div>
-    <div class="card" onclick="launchGame('games/game18.html')">
-      <img src="images/game18.png" alt="Game 18">
-      <div class="game-title">Game 18</div>
+
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game18.html')">
+      <img src="images/game18.png"><div class="game-title">Game 18</div>
     </div>
-    <div class="card" onclick="launchGame('games/game19.html')">
-      <img src="images/game19.png" alt="Game 19">
-      <div class="game-title">Game 19</div>
+
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game19.html')">
+      <img src="images/game19.png"><div class="game-title">Game 19</div>
     </div>
-    <div class="card" onclick="launchGame('games/game20.html')">
-      <img src="images/game20.png" alt="Game 20">
-      <div class="game-title">Game 20</div>
+
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/game20.html')">
+      <img src="images/game20.png"><div class="game-title">Game 20</div>
     </div>
+
   </div>
 </div>
 
