--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h2>PRTY</h2>
   <a href="index.html">Home</a>
   <a href="games.html">Games</a>
+  <a href="apps.html">Apps</a>
   <a href="movies.html">Movies (Google Drive)</a>
   <a href="proxy.html">Proxy Links</a>
   <a href="credits.html">Credits</a>
