--- a/movies.html
+++ b/movies.html
@@ -10,6 +10,7 @@
   <h2>PRTY</h2>
   <a href="index.html">Home</a>
   <a href="games.html">Games</a>
+  <a href="apps.html">Apps</a>
   <a href="movies.html">Movies</a>
   <a href="proxy.html">Proxy</a>
   <a href="credits.html">Credits</a>
