--- a/apps.html
+++ b/apps.html
@@ -25,7 +25,7 @@
   <div class="game-grid">
 
     <div class="game-card" data-type="app" data-category="action" onclick="launchApp('apps/app1.html')">
-      <img src="images/app1.png">
+      <img src="images/chatgpt.jpg>
       <p>App 1</p>
     </div>
 
