--- a/apps.html
+++ b/apps.html
@@ -3,6 +3,56 @@
 <head>
   <title>PRTY – Apps</title>
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    /* Center the under construction content */
+    .under-construction {
+      height: 80vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: #00ffff;
+    }
+
+    .under-construction h1 {
+      font-size: 3em;
+      text-shadow: 0 0 20px #ff00cc, 0 0 30px #00ffff;
+      margin-bottom: 15px;
+    }
+
+    .under-construction p {
+      font-size: 1.5em;
+      margin-bottom: 30px;
+    }
+
+    .under-construction .icon {
+      font-size: 5em;
+      margin-bottom: 20px;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+    }
+
+    .back-home {
+      padding: 12px 25px;
+      background: linear-gradient(45deg, #ff00cc, #00ffff);
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(255,0,255,0.5);
+      transition: 0.25s ease;
+    }
+
+    .back-home:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px rgba(0,255,255,0.7);
+    }
+  </style>
 </head>
 <body>
 
@@ -21,36 +71,11 @@
 
 <!-- MAIN CONTENT -->
 <div class="main">
-  <h1 class="page-title">📱 Apps</h1>
-
-  <!-- Apps Grid -->
-  <div class="grid">
-
-    <div class="card game-card" data-type="app" onclick="window.open('https://drive.google.com/file/d/1R1J6x9S-FPg2N2mIjrOCEL6Og5_q1kzn/view?usp=drivesdk' , '_blank')">
-      <img src="images/app1.png" alt="App 1">
-      <div class="game-title">App 1</div>
-    </div>
-
-    <div class="card game-card" data-type="app" onclick="launchApp('apps/app2.html')">
-      <img src="images/app2.png" alt="App 2">
-      <div class="game-title">App 2</div>
-    </div>
-
-    <div class="card game-card" data-type="app" onclick="launchApp('apps/app3.html')">
-      <img src="images/app3.png" alt="App 3">
-      <div class="game-title">App 3</div>
-    </div>
-
-    <div class="card game-card" data-type="app" onclick="launchApp('apps/app4.html')">
-      <img src="images/app4.png" alt="App 4">
-      <div class="game-title">App 4</div>
-    </div>
-
-    <div class="card game-card" data-type="app" onclick="launchApp('apps/app5.html')">
-      <img src="images/app5.png" alt="App 5">
-      <div class="game-title">App 5</div>
-    </div>
-
+  <div class="under-construction">
+    <div class="icon">🚧</div>
+    <h1>Apps Under Construction</h1>
+    <p>We’re building this section! Come back soon for amazing apps.</p>
+    <a class="back-home" href="index.html">← Back to Home</a>
   </div>
 </div>
 
