--- a/games.html
+++ b/games.html
@@ -74,8 +74,8 @@
     </div>
 
     <!-- Remaining placeholders -->
-    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game11.html')">
-      <img src="images/game11.png"><div class="game-title">Game 11</div>
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/adventurecapitalist.html')">
+      <img src="images/adventurecapitalist.png"><div class="game-title">Adventure Capitalist</div>
     </div>
 
     <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game12.html')">
