--- a/movies.html
+++ b/movies.html
@@ -25,7 +25,7 @@
     <!-- 20 placeholder movie cards -->
     <div class="card">
       <a href="https://drive.google.com/file/d/18-Zx0gG51Xk233xvOj1vlwOqsW7hzcPN/view?usp=drive_link" target="_blank">
-        <img src="images/zootopia2.png" alt="Movie 1">
+        <img src="movies.images/zootopia-2.jpg" alt="Movie 1">
         <div class="game-title">Zootopia 2</div>
       </a>
     </div>
