--- a/credits.html
+++ b/credits.html
@@ -123,8 +123,8 @@
       </div>
       <div class="credit-card">
         <img src="images/assets.png" alt="Assets">
-        <h3>Open Source Assets</h3>
-        <p>Icons, Images, Sounds</p>
+        <h3>Virgo/Offensive Asian</h3>
+        <p>Helper / Link & Movie Provider</p>
       </div>
       <div class="credit-card">
         <img src="images/special.png" alt="Special Thanks">
