--- a/games.html
+++ b/games.html
@@ -86,8 +86,8 @@
       <img src="images/ultrakill.png"><div class="game-title">ULTRAKILL</div>
     </div>
 
-    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game14.html')">
-      <img src="images/game14.png"><div class="game-title">Game 14</div>
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/bowmasters.html')">
+      <img src="images/bowmaster.png"><div class="game-title">Bowmaster</div>
     </div>
 
     <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game15.html')">
