--- a/games.html
+++ b/games.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game15.html')">
-      <img src="images/game15.png"><div class="game-title">Game 15</div>
+      <img src="images/game15.png"><div class="game-title">Coming Soon</div>
     </div>
 
     <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game16.html')">
