--- a/games.html
+++ b/games.html
@@ -90,8 +90,8 @@
       <img src="images/bowmaster.png"><div class="game-title">Bowmaster</div>
     </div>
 
-    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/game15.html')">
-      <img src="images/game15.png"><div class="game-title">Coming Soon</div>
+    <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/digdeep.html')">
+      <img src="images/digdeep.png"><div class="game-title">Dig Deep</div>
     </div>
 
     <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game16.html')">
