--- a/movies.html
+++ b/movies.html
@@ -43,7 +43,7 @@
     </div>
     <div class="card">
       <a href="https://drive.google.com/file/d/15tXOfoPggX1HUArXsyiY868Ug-eqgAZn/view?usp=drive_link" target="_blank">
-        <img src="theblackphone.jpg" alt="Movie 4">
+        <img src="movies.images/theblackphone.jpg" alt="Movie 4">
         <div class="game-title">The Black Phone</div>
       </a>
     </div>
