--- a/games.html
+++ b/games.html
@@ -103,20 +103,20 @@
     </div>
 
     <div class="card game-card" data-type="game" data-category="action" onclick="launchGame('games/basketbattle.html')">
-      <img src="images/basketbattle.png"><div class="game-title">Basket BAttle</div>
+      <img src="images/basketbattle.png"><div class="game-title">Basket Battle</div>
     </div>
 
-    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/game19.html')">
-      <img src="images/game19.png"><div class="game-title">Game 19</div>
+    <div class="card game-card" data-type="game" data-category="puzzle" onclick="launchGame('games/bridgerace.html')">
+      <img src="images/bridgerace.png"><div class="game-title">Bridge Race</div>
     </div>
 
-    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/game20.html')">
-      <img src="images/game20.png"><div class="game-title">Game 20</div>
+    <div class="card game-card" data-type="game" data-category="story" onclick="launchGame('games/carsurvival3d.html')">
+      <img src="images/carsurvival3d.png"><div class="game-title">Car Survival 3D</div>
     </div>
 
-    <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Game 21</div>
+    <div class="card" onclick="launchGame('games/colormatch.html')">
+  <img src="images/colormatch.png">
+  <div class="game-title">Color Match</div>
 </div>
 
   <div class="card" onclick="launchGame('games/game21.html')">
