--- a/games.html
+++ b/games.html
@@ -121,27 +121,27 @@
 
   <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
-  <div class="game-title">Game 22</div>
+  <div class="game-title">COming Soon</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
-  <div class="game-title">Game 23</div>
+  <div class="game-title">Coming Soon</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
-  <div class="game-title">Game 24</div>
+  <div class="game-title">Coming Soon</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
-  <div class="game-title">Game 25</div>
+  <div class="game-title">Coming Soon</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
-  <div class="game-title">Game 26</div>
+  <div class="game-title">Coming Soon</div>
 </div>
 
   </div>
