--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li>Trying to Add Movies/TV Shows</li>
       <li>More Updates will be added soon</li>
 
-      <p>REPORT ANY BUGS, go to the discord and report ant game, website, or movie bug to PRTY Website Devs. Join our Bug Hunter Program</p>
+      <p><strong>REPORT ANY BUGS</strong>, go to the discord and report ant game, website, or movie bug to PRTY Website Devs. Join our Bug Hunter Program!</p>
       <!-- Add more updates here -->
     </ul>
   </div>
