--- a/admin/login.html
+++ b/admin/login.html
@@ -16,6 +16,6 @@
     <p id="loginError" class="error"></p>
   </form>
 </div>
-<script src="admin.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
