--- a/games.html
+++ b/games.html
@@ -119,9 +119,9 @@
   <div class="game-title">Color Match</div>
 </div>
 
-  <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">COming Soon</div>
+  <div class="card" onclick="launchGame('games/clashofvikings.html')">
+  <img src="images/clashofvikings.png">
+  <div class="game-title">Clash Of Vikings</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
