--- a/games.html
+++ b/games.html
@@ -129,9 +129,9 @@
   <div class="game-title">FNAF World</div>
 </div>
 
-        <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
+        <div class="card" onclick="launchGame('games/Terraria.html')">
+  <img src="images/terraria.png">
+  <div class="game-title">Terraria</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
