--- a/games.html
+++ b/games.html
@@ -134,9 +134,9 @@
   <div class="game-title">Terraria</div>
 </div>
 
-        <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
+        <div class="card" onclick="launchGame('games/Hollow Knight.html')">
+  <img src="images/hollowknight.png">
+  <div class="game-title">Hollow Knight</div>
 </div>
 
         <div class="card" onclick="launchGame('games/game21.html')">
