--- a/games.html
+++ b/games.html
@@ -139,7 +139,42 @@
   <div class="game-title">Hollow Knight</div>
 </div>
 
-        <div class="card" onclick="launchGame('games/game21.html')">
+        <div class="card" onclick="launchGame('games/Attack Hole.html')">
+  <img src="images/attackhole.png">
+  <div class="game-title">Attack Hole</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/People Playground.html')">
+  <img src="images/peopleplayground.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
   <div class="game-title">Coming Soon</div>
 </div>
