--- a/games.html
+++ b/games.html
@@ -146,7 +146,7 @@
 
     <div class="card" onclick="launchGame('games/People Playground.html')">
   <img src="images/peopleplayground.png">
-  <div class="game-title">Coming Soon</div>
+  <div class="game-title">People Playground</div>
 </div>
 
     <div class="card" onclick="launchGame('games/game21.html')">
