--- a/manga.html
+++ b/manga.html
@@ -31,7 +31,7 @@
     </div>
     <div class="card">
       <a href="" target="_blank">
-        <img src="movies.images/trust.jpg" alt="Movie 2">
+        <img src="" alt="Movie 2">
         <div class="game-title">Placeholder</div>
       </a>
     </div>
@@ -49,7 +49,7 @@
     </div>
     <div class="card">
       <a href="https://drive.google.com/file/d/1WXHAiMJ7qYxV2S5PNDw91FBs3WKngo1c/view?usp=drive_link" target="_blank">
-        <img src="movies.images/superman.jpg" alt="Movie 5">
+        <img src="" alt="Movie 5">
         <div class="game-title">Placeholder</div>
       </a>
     </div>
