--- a/manga.html
+++ b/manga.html
@@ -25,14 +25,14 @@
     <!-- 20 placeholder Book cards -->
     <div class="card">
       <a href="https://drive.google.com/drive/folders/1iSzHqkCiW5S44-_97x_6x_pTTMJrPrMH" target="_blank">
-        <img src="" alt="Manga 1">
-        <div class="game-title">Dragon Ball</div>
+        <img src="manga.images/superballsuper.jpg" alt="Manga 1">
+        <div class="game-title">Dragon Ball Super</div>
       </a>
     </div>
     <div class="card">
-      <a href="" target="_blank">
-        <img src="" alt="Movie 2">
-        <div class="game-title">Placeholder</div>
+      <a href="https://drive.google.com/drive/folders/1dHK5v5NZNiDvlQ9VK06AAPFNngnkkQCZ" target="_blank">
+        <img src="manga.images/naruto.jpg" alt="Manga 2">
+        <div class="game-title">Naruto</div>
       </a>
     </div>
     <div class="card">
