--- a/manga.html
+++ b/manga.html
@@ -36,15 +36,15 @@
       </a>
     </div>
     <div class="card">
-      <a href="" target="_blank">
-        <img src="" alt="Movie 3">
-        <div class="game-title"></div>
+      <a href="https://drive.google.com/drive/folders/1hcGBwfdgJchkPlZMX55YF52aZRNdbXW9" target="_blank">
+        <img src="manga.images/bluelock.jpg" alt="Manga 3">
+        <div class="game-title">Bluelock</div>
       </a>
     </div>
     <div class="card">
-      <a href="" target="_blank">
-        <img src="" alt="Movie 4">
-        <div class="game-title">Placeholder</div>
+      <a href="https://drive.google.com/drive/folders/1mmBVdj-oKIC0aSdOcMcEnQ129-rKimKo" target="_blank">
+        <img src="manga.images/demonslayer.jpg" alt="Manga 4">
+        <div class="game-title">Demon Slayer</div>
       </a>
     </div>
     <div class="card">
