--- a/games.html
+++ b/games.html
@@ -159,9 +159,44 @@
   <div class="game-title">3D Bolt Master</div>
 </div>
 
+    <div class="card" onclick="launchGame('games/Plants Vs Zombies.html')">
+  <img src="images/pvz.png">
+  <div class="game-title">Plants Vs  Zombies</div>
+</div>
+
     <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
   <div class="game-title">Coming Soon</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Magic Tiles 3.html')">
+  <img src="images/magictiles3.png">
+  <div class="game-title">Magic Tiles 3</div>
+</div>
+
+<div class="card" onclick="launchGame('games/DOOM.html')">
+  <img src="images/doom.png">
+  <div class="game-title">DOOM</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Slope.html')">
+  <img src="images/slope.png">
+  <div class="game-title">Slope</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Color Water Sort 3D.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Color Water Sort 3D</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Cookie Clicker.html')">
+  <img src="images/cookieclicker.png">
+  <div class="game-title">Cookie Clicker</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Geometry Dash Lite.html')">
+  <img src="images/geometrydash_lite.png">
+  <div class="game-title">Geometry Dash Lite</div>
 </div>
 
     <div class="card" onclick="launchGame('games/game21.html')">
@@ -179,6 +214,10 @@
   <div class="game-title">Coming Soon</div>
 </div>
 
+    <div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
   </div>
 </div>
 
