--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <div id="time"></div>
   </div>
 
+  <!-- ⭐ PRTY Activity Bar -->
+<div id="prty-activity-bar">
+  <span id="prty-activity-text">Loading PRTY activity...</span>
+</div>
+
   <!-- Updates Section -->
   <div class="updates-section">
     <h2>PRTY Updates</h2>
