--- a/movies.html
+++ b/movies.html
@@ -5,6 +5,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Movie Loading Screen -->
+<div id="movie-loading">
+  <div class="movie-loader">
+    <span id="movie-loading-text"></span>
+    <small>AfterPRTY Cinema</small>
+  </div>
+</div>
 
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
