--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <h2>PRTY Updates</h2>
     <h3 class="subtitle">Updates - Website Release</h3>
     <ul class="updates-list">
-      <li>Added 10 Games </li>
-      <li>Trying to Add Movies/TV Shows</li>
-      <li>More Updates will be added soon</li>
+      <li>New</li>
+      <li>Update</li>
+      <li>Coming Soon</li>
 
       <p><strong>REPORT ANY BUGS</strong>, go to the discord and report ant game, website, or movie bug to PRTY Website Devs. Join our Bug Hunter Program! DM rveprty. or rveprty.main if you have any questions.</p>
       <!-- Add more updates here -->
