--- a/proxy.html
+++ b/proxy.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- General PRTY Loading Screen -->
+<div id="loading-screen-prty">
+  <div id="loading-text-prty"></div>
+</div>
 
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
