--- a/credits.html
+++ b/credits.html
@@ -97,6 +97,11 @@
   </style>
 </head>
 <body>
+  <!-- Loading Screen -->
+<div id="loading-screen">
+  <div id="loading-text"></div>
+</div>
+
 
   <div class="background-animation"></div>
 
@@ -105,7 +110,7 @@
     <a href="index.html">Home</a>
     <a href="games.html">Games</a>
     <a href="apps.html">Apps</a>
-    <a href="movies.html">Movies</a>
+    <a href="movies.html">Movies (Google Drive)</a>
     <a href="proxy.html">Proxy</a>
     <a href="credits.html">Credits</a>
   </div>
