--- a/games.html
+++ b/games.html
@@ -5,13 +5,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div id="loading-screen">
+  <div id="loading-text"></div>
+</div>
+
 
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
   <a href="index.html">Home</a>
   <a href="games.html">Games</a>
   <a href="apps.html">Apps</a>
-  <a href="movies.html">Movies</a>
+  <a href="movies.html">Movies (Google Drive)</a>
   <a href="proxy.html">Proxy</a>
   <a href="credits.html">Credits</a>
 </div>
@@ -130,7 +134,7 @@
 </div>
 
         <div class="card" onclick="launchGame('games/Terraria.html')">
-  <img src="images/terraria.png">
+  <img src="images/terreria.png">
   <div class="game-title">Terraria</div>
 </div>
 
@@ -139,13 +143,41 @@
   <div class="game-title">Hollow Knight</div>
 </div>
 
-        <div class="card" onclick="launchGame('games/game21.html')">
+        
+<div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+<div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+<div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+<div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+<div class="card" onclick="launchGame('games/game21.html')">
+  <img src="images/game21.png">
+  <div class="game-title">Coming Soon</div>
+</div>
+
+<div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/game21.png">
   <div class="game-title">Coming Soon</div>
 </div>
 
   </div>
 </div>
+
+
 
 <script src="js/main.js"></script>
 </body>
