--- a/movies.html
+++ b/movies.html
@@ -5,13 +5,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div id="loading-screen">
+  <div id="loading-text"></div>
+</div>
+
 
 <div class="sidebar" id="sidebar">
   <h2>PRTY</h2>
   <a href="index.html">Home</a>
   <a href="games.html">Games</a>
   <a href="apps.html">Apps</a>
-  <a href="movies.html">Movies</a>
+  <a href="movies.html">Movies (Google Drive)</a>
   <a href="proxy.html">Proxy</a>
   <a href="credits.html">Credits</a>
 </div>
