--- a/apps.html
+++ b/apps.html
@@ -62,7 +62,7 @@
   <a href="index.html">Home</a>
   <a href="games.html">Games</a>
   <a href="apps.html">Apps</a>
-  <a href="movies.html">Movies</a>
+  <a href="movies.html">Movies (Google Drive)</a>
   <a href="proxy.html">Proxy</a>
   <a href="credits.html">Credits</a>
 </div>
@@ -74,7 +74,7 @@
   <div class="under-construction">
     <div class="icon">🚧</div>
     <h1>Apps Under Construction</h1>
-    <p>We’re building this section! Come back soon for amazing apps.</p>
+    <p>We’re building this section! Come back soon for amazing apps. Current completion Percentage: 51%</p>
     <a class="back-home" href="index.html">← Back to Home</a>
   </div>
 </div>
