--- a/proxy.html
+++ b/proxy.html
@@ -11,7 +11,7 @@
   <a href="index.html">Home</a>
   <a href="games.html">Games</a>
   <a href="apps.html">Apps</a>
-  <a href="movies.html">Movies</a>
+  <a href="movies.html">Movies (Google Drive)</a>
   <a href="proxy.html">Proxy</a>
   <a href="credits.html">Credits</a>
 </div>
