--- a/games.html
+++ b/games.html
@@ -199,24 +199,29 @@
   <div class="game-title">Geometry Dash Lite</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
+    <div class="card" onclick="launchGame('games/Doodle Jump.html')">
+  <img src="images/doodlejump.png">
+  <div class="game-title">Doodle Jump</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/Crossy Road.html')">
+  <img src="images/crossyroad.png">
+  <div class="game-title">Crossy Road</div>
+</div>
+
+    <div class="card" onclick="launchGame('games/CircloO.html')">
+  <img src="images/.png">
+  <div class="game-title"></div>
 </div>
 
     <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
+  <img src="images/circloO.png">
+  <div class="game-title">CircloO</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
-</div>
-
-    <div class="card" onclick="launchGame('games/game21.html')">
-  <img src="images/game21.png">
-  <div class="game-title">Coming Soon</div>
+        <div class="card" onclick="launchGame('games/Cluster Rush.html')">
+  <img src="images/clustertruck.png">
+  <div class="game-title">Clustertruck</div>
 </div>
   </div>
 </div>
