--- a/games.html
+++ b/games.html
@@ -209,21 +209,56 @@
   <div class="game-title">Crossy Road</div>
 </div>
 
-    <div class="card" onclick="launchGame('games/CircloO.html')">
-  <img src="images/.png">
-  <div class="game-title"></div>
-</div>
-
     <div class="card" onclick="launchGame('games/game21.html')">
   <img src="images/circloO.png">
   <div class="game-title">CircloO</div>
 </div>
 
-        <div class="card" onclick="launchGame('games/Cluster Rush.html')">
+        
+    <div class="card" onclick="launchGame('games/Cluster Rush.html')">
   <img src="images/clustertruck.png">
   <div class="game-title">Clustertruck</div>
 </div>
+
+      <div class="card" onclick="launchGame('games/Block Blast.html')">
+  <img src="images/blockblast.png">
+  <div class="game-title">Block Blast</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Basketball Stars.html')">
+  <img src="images/basketballstars.png">
+  <div class="game-title">Basketball Stars</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Slice it All.html')">
+  <img src="images/sliceitall.png">
+  <div class="game-title">Slice it All</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/.html')">
+  <img src="images/.png">
+  <div class="game-title">PC</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Ice Dodo.html')">
+  <img src="images/icedodo.png">
+  <div class="game-title">Ice Dodo</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Death Run 3D.html')">
+  <img src="images/deathrun3d.png">
+  <div class="game-title">Death Run 3D</div>
+</div>
+
+      <div class="card" onclick="launchGame('games/Cut The Rope.html')">
+  <img src="images/cuttherope.png">
+  <div class="game-title">Cut The Rope</div>
+</div>
   </div>
+
+    <div class="card" onclick="launchGame('games/.html')">
+  <img src="images/.png">
+  <div class="game-title">PC</div>
 </div>
 
 <script src="js/main.js"></script>
